fix: fix chromium whitespace bug, alter mobile margins

--- a/common/static/css/common.css
+++ b/common/static/css/common.css
@@ -382,6 +382,11 @@
     }
 }
 
+.notes-display__textarea--mobile {
+    padding: 0.75rem;
+
+}
+
 .main-navbar__icon-wrapper {
     width: 3rem;
     height: 3rem;
